v0.3.1
  Lint fixes
v0.3.0:
  Add root FS mount option
  Add option to set root mail alias
v0.2.0:
  Secure RH init scripts
  Add option for beaver log shipping
  Add ability to set root PW and create an "ohshit" user
  Cleanup unused users from default install
v0.1.11:
  Add default bash PS1 prompt
v0.1.10:
  Add bash-completion package
v0.1.9:
  Initial public release