@@ -1,3 +1,4 @@
+  Remove setting the root device params
 v0.3.1
   Lint fixes
 v0.3.0:
